major refactor done, working, testcase , sonarIssues, readme,selfreview left
