# src/routes/root.route.ts
@@ -1,14 +1,16 @@
 import express, { Router } from "express";
 import healthRoute from "./health.route";
-import uploadCandidateInfoRoute from "./uploadCandidateInfo.route";
-import generateS3UploadURL from "./generateS3UploadURL.route";
+import saveCandidateInfoRoute from "./saveCandidateInfo.route";
+import getS3DefaultUploadURL from "./getS3DefaultUploadUrl.route";
 import getCandidateInfoRoute from "./getCandidateInfo.route";
+import generateS3BadBucketUploadURL from "./getS3BadBucketUploadUrl.route";
 
 const router: Router = express.Router();
 
 router.use("/health", healthRoute);
-router.use("/upload", uploadCandidateInfoRoute);
-router.use("/uploadurl", generateS3UploadURL);
+router.use("/saveCandidateInfo", saveCandidateInfoRoute);
 router.use("/getCandidateInfo", getCandidateInfoRoute);
+router.use("/defaultUploadUrl", getS3DefaultUploadURL);
+router.use("/badbucketUploadURL", generateS3BadBucketUploadURL);
 
 export default router;
